2008-04-05  Alex Graveley  <alex@beatniksoftware.com>

	* configure.in: Bump maxVersion to 3.0pre.  Yay!

	* compzilla/src/compzillaWindow.cpp (SendMouseEvent): Fix
	libcompzilla loading issues with recent Firefox3, probably due to
	changes in String API exportation in libxul.  CompzillaWindow used
	the nsIFrame to get window<->screen coordinates, but nsIFrame.h
	and its dependencies used internal string classes which led to
	link errrors. So instead we just use the cached Xwindow property
	data to offset event coordinates, which works okay.

2008-04-05  Alex Graveley  <alex@beatniksoftware.com>

	* compzilla/src/compzillaWindow.cpp: Make it work with FF2 also.
	Why, I bother trying to support this anymore, who knows?

	* compzilla/src/compzillaRenderingContext.cpp (Redraw): Use
	nsIDeviceContext::AppUnitsPerCSSPixel instead of the disappeared
	GetPrimaryCanvasFrame()->PresContext()->AppUnitsPerCSSPixel().

	* configure.in: Support up to 3.0b5pre.  #ifdef MOZ_CAIRO_GFX ->
	MOZ_TREE_CAIRO to check for cairo-based rendering.

2007-10-03  Alex Graveley  <alex@beatniksoftware.com>

	* configure.in: Bump version to 0.2.1.  Bump Minefield support to
	3.0a9pre/3.0a9.

	* compzilla/src/compzillaIRenderingContextInternal.h: Split out
	compzillaIRenderingContextInternal decl to here.

	* compzilla/src/compzillaRenderingContext.h/cpp: Conform to new
	Minefield canvas backend API.

	* compzilla/src/compzillaRenderingContextFx2.h/cpp: Split out ff2
	canvas rendering context to here, since the interface for
	Minefield has diverged.

	* compzilla/public/compzillaIControl.idl: Fix bug in
	compzillaIControl uuid which causes conflcts when users have
	mugshot installed.
	* compzilla/public/compzillaIRenderingContext.idl: Ditto.

2007-08-19  Alex Graveley  <alex@beatniksoftware.com>

	* configure.in: Bump version to 0.2.

	* README: Tell people to generate an xpi and install it.

	* NEWS: Update for 0.2.

2007-08-19  Alex Graveley  <alex@beatniksoftware.com>
